--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Jane Doe | Web Developer</title>
+    <title>Erin Edward | Aspiring Software Developer</title>
   </head>
 
   <body>
+    "Hello World"
     <!-- Navbar -->
 
     <!-- Hero Section -->
