--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           repudiandae quos!
         </p>
       </div>
-</section>
+    </section>
 
     <!-- More About -->
     <section class="more-about">
@@ -230,6 +230,7 @@
       <a href="#" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
+    </div>
 
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
@@ -237,7 +238,7 @@
       src="assets/icons/icons8-upward-arrow.gif"
       class="socicon up-arrow"
       alt="scroll-up"
-  /></i>
+    /></i>
 
     <!-- Footer section -->
     <footer>
@@ -248,7 +249,7 @@
           >Erin Edward</a
         >
       </p>
-</footer>
+    </footer>
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
