--- a/index.html
+++ b/index.html
@@ -55,10 +55,15 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+          I graduated from the University of Waterloo Computer Science (BCS) 
+          program in 2022 with a specialization in Computational Fine Arts 
+          and a minor in French Studies. My interests lie at the intersection 
+          of creativity and technology, whether that's thinking outside the box 
+          to solve interesting problems or creating beautiful things with code. 
+          When I'm not in front of my computer you can find me nose deep in a 
+          book or experimenting in the kitchen. I'm currently looking for 
+          full-time opportunities where I can be part of a dynamic team and 
+          continue my growth as a software developer.
         </p>
       </div>
     </section>
