--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <title>Erin Edward | Aspiring Software Developer</title>
+    <title>Erin Edward</title>
   </head>
 
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>ERIN EDWARD</h1>
+      <h1>ERIN EDWARD | Aspiring Software Developer</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
