updated icons and images

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         loading="lazy"
         class="hero-img"
       />
-      <div class="bio animate__animated animate__shakeX">
+      <div class="bio animate__animated animate__pulse">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           I graduated from the University of Waterloo Computer Science (BCS) 
@@ -213,7 +213,7 @@
     <div class="socials">
       <a href="https://www.linkedin.com/in/erin-edward/" target="_blank"
         ><img
-          src="assets/icons/icons8-linkedin-circled.gif"
+          src="assets/icons/icons8-linkedin-circled-48.png"
           alt="Linkedin"
           loading="lazy"
           class="socicon"
@@ -222,17 +222,28 @@
         ><img 
           src="assets/icons/icons8-github.gif" 
           alt="Github" 
+          loading="lazy"
+          class="socicon"
+      /></a>
+      <a href="https://open.spotify.com/user/esedward4" target="_blank"
+        ><img 
+          src="assets/icons/icons8-spotify-48.png" 
+          alt="Spotify" 
+          loading="lazy"
           class="socicon"
       /></a>
     </div>
 
     <!-- Scroll to top -->
-    <i class="scroll-up" id="scroll-up"
+    <!-- <i class="scroll-up" id="scroll-up"
     ><img
       src="assets/icons/icons8-upward-arrow.gif"
       class="socicon up-arrow"
       alt="scroll-up"
-    /></i>
+    /></i> -->
+    <button class="scroll-up" id="scroll-up">
+      <ion-icon name="arrow-up-circle"></ion-icon>
+    </button>
 
     <!-- Footer section -->
     <footer>
@@ -241,6 +252,12 @@
         Built with &#x2661; by
         <a href="https://www.linkedin.com/in/erin-edward/" target="_blank"
           >Erin Edward</a
+        >
+      </p>
+      <p class="copy">
+        icons by 
+        <a href="https://icons8.com/" target="_blank"
+          >icons8.com</a
         >
       </p>
     </footer>
