skills and resume

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="https://drive.google.com/file/d/1IGw22m_uttpWpc4wB5Ia8QfPcPMcxSon/view?usp=sharing" class="nav-link">Resume</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
       <button class="burger-menu" id="burger-menu">
@@ -90,50 +91,28 @@
     <!-- Skills section -->
     <section class="skills" id="skills">
       <h2 class="skill-header">My Top Skills</h2>
-
-      <div class="skills-wrapper">
-        <div class="first-set animate__animated animate__pulse">
-          <img
-            src="assets/icons/icons8-html-5.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-          <img
-            src="assets/icons/icons8-css3.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-          <img
-            src="assets/icons/icons8-javascript.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-        </div>
-
-        <div class="second-set animate__animated animate__pulse">
-          <img
-            src="assets/icons/icons8-bootstrap.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-          <img
-            src="assets/icons/icons8-react-native.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-          <img
-            src="assets/icons/icons8-git.svg"
-            alt=""
-            loading="lazy"
-            class="icon icon-card"
-          />
-        </div>
-      </div>
+      <ul class="skill-body">
+        <li><b class="skill-titles">C++ :</b> 
+          Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
+          Projects include console Chess and Catan games, maze with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
+        <li><b class="skill-titles">Python :</b> 
+          Several years of course work as well as script writing for internships.</li>
+        <li><b class="skill-titles">Bash scripts :</b> 
+          Several years of course work as well as script writing for internships.</li>
+        <li><b class="skill-titles">Agile Development :</b> 
+          Lead the transition to Agile development at my last coop and acted as scrum leader/project manager</li>
+        <li><b class="skill-titles">Git version control :</b>
+          Several years of experience for both group and personal projects</li>
+        <li><b class="skill-titles">Java :</b> 
+          Coursework projects including mobile PDF annotater for <b>Android</b>, snake game, and image editor similar to MS paint</li>
+        <li><b class="skill-titles">HTML/CSS/JavaScript :</b> 
+          I built this website! I've also contributed to the 
+          <a href="https://wics.uwaterloo.ca/">WiCS</a>
+           website and created web apps for several hackathons.
+        </li>
+        <li><b class="skill-titles">Math :</b> 
+          Skilled in <b>Linear Algebra</b>, multi variable <b>Calculus</b>, and basic <b>Physics</b> of motion.</li>
+      </ul>
     </section>
 
     <!-- Projects section -->
