--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="projects" id="projects">
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
-        <div class="project-container project-card ray-tracer">
+        <div class="project-container project-card">
           <h3 class="project-title">Ray Tracer</h3>
           <div class="slideshow-container">
             <div class="slide-fade">
@@ -176,7 +176,7 @@
             for access to the code
           </p>
         </div>
-        <div class="project-container project-card time-flies">
+        <div class="project-container project-card">
           <h3 class="project-title">Time Flies</h3>
           <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" frameborder="0"></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
@@ -187,6 +187,20 @@
           <a href="https://drive.google.com/file/d/1NUAtHu0nHJ4Y7NP1H8KdyVY-xWoFYD-_/view?usp=sharing" target="_blank" class="project-link">See the full report</a>
           <br />
           <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a1" class="nav-link" id="code-flies">View the code repository</a>
+        </div>
+        <div class="project-container project-card">
+          <h3 class="project-title">Visual Weather Report</h3>
+          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0"></iframe>
+          <!-- <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          <p class="project-details">
+            This piece was inspired by the weather animations on mobile devices.
+            Written in processing, the code determines the high and the low temperature for the current day and 
+            uses this information to create a background gradient with colours based on temperature. 
+            It also looks at the precipitation status and the wind direction and speed.
+          </p>
+          <a href="https://drive.google.com/file/d/1KEZ97Q6EK1sD7cekAAeWazNF1VCeSlH1/view?usp=sharing" target="_blank" class="project-link">See the full report</a>
+          <br />
+          <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
         </div>
       </div>
     </section>
