--- a/index.html
+++ b/index.html
@@ -170,24 +170,28 @@
             and triangle meshes. Implemented specular shading using the Lambertian model and anti-aliasing by super sampling. 
             I explored topics in light and shading models, lenses, and surface intersection with quartic functions. 
           </p>
-          <a href="https://drive.google.com/file/d/1AKi3c-zAx9G9dOnxDLMweD6BgA9a4FQS/view?usp=sharing" target="_blank" class="project-link">See the full report</a>
-          <p>
-            <a href="#contact" class="nav-link" id="code-ray-tracer">Contact me</a>
-            for access to the code
-          </p>
+          <div class="project-links">
+            <a href="https://drive.google.com/file/d/1AKi3c-zAx9G9dOnxDLMweD6BgA9a4FQS/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
+            <p>
+              <a href="#contact" class="nav-link" id="code-ray-tracer">Contact me</a>
+              for access to the code
+            </p>
+          </div>
         </div>
         <div class="project-container project-card">
           <h3 class="project-title">Time Flies</h3>
-          <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" frameborder="0"></iframe>
+          <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" frameborder="0" style="width:100%"></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
           <p class="project-details">
             This piece was inspired by my friend's research for her Masters in Genetics. Written in Processing, 
             the circular agents moving along the screen represent flies under a microscope, reproducing and passing on their genetic traits.
           </p>
-          <a href="https://drive.google.com/file/d/1NUAtHu0nHJ4Y7NP1H8KdyVY-xWoFYD-_/view?usp=sharing" target="_blank" class="project-link">See the full report</a>
-          <br />
-          <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a1" class="nav-link" id="code-flies">View the code repository</a>
-        </div>
+          <div class="project-links">
+            <a href="https://drive.google.com/file/d/1NUAtHu0nHJ4Y7NP1H8KdyVY-xWoFYD-_/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
+            <br />
+            <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a1" class="nav-link" id="code-flies">View the code repository</a>
+          </div>
+          </div>
         <div class="project-container project-card">
           <h3 class="project-title">Visual Weather Report</h3>
           <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0"></iframe>
@@ -198,9 +202,28 @@
             uses this information to create a background gradient with colours based on temperature. 
             It also looks at the precipitation status and the wind direction and speed.
           </p>
-          <a href="https://drive.google.com/file/d/1KEZ97Q6EK1sD7cekAAeWazNF1VCeSlH1/view?usp=sharing" target="_blank" class="project-link">See the full report</a>
-          <br />
-          <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
+          <div class="project-links">
+            <a href="https://drive.google.com/file/d/1KEZ97Q6EK1sD7cekAAeWazNF1VCeSlH1/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
+            <br />
+            <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
+          </div>
+        </div>
+      </div>
+      <div class="projects-container">
+        <div class="project-container project-card">
+          <h3 class="project-title">Project 4</h3>
+          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0"></iframe>
+          <!-- <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          <p class="project-details">
+            This DEMO was created for a Human-Computer Interaction course using Android Studio 
+            in collaboration with Kayla Hardie, Kevin Lu, and Kriti Ravindran.
+            We created a high-fidelity prototype and interviewed target users to test user-experience.
+          </p>
+          <div class="project-links">
+            <a href="https://drive.google.com/file/d/1KEZ97Q6EK1sD7cekAAeWazNF1VCeSlH1/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
+            <br />
+            <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
+          </div>
         </div>
       </div>
     </section>
