projects mobile layout

--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
             the circular agents moving along the screen represent flies under a microscope, reproducing and passing on their genetic traits.
           </p>
           <div class="project-links">
-            <a href="https://drive.google.com/file/d/1NUAtHu0nHJ4Y7NP1H8KdyVY-xWoFYD-_/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
+            <a href="https://drive.google.com/file/d/1NUAtHu0nHJ4Y7NP1H8KdyVY-xWoFYD-_/view?usp=sharing" target="_blank" class="nav-link" style="width:100%" >See the full report</a>
             <br />
             <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a1" class="nav-link" id="code-flies">View the code repository</a>
           </div>
           </div>
         <div class="project-container project-card">
           <h3 class="project-title">Visual Weather Report</h3>
-          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0"></iframe>
+          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0" style="width:100%"></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
           <p class="project-details">
             This piece was inspired by the weather animations on mobile devices.
