--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
           </div>
           <p class="project-details">
-            Non-recursive ray tracer written in C++ capable of secondary shadow rays and surface intersection with geometric primitives 
-            and triangle meshes. Implemented specular shading using the Lambertian model and anti-aliasing by super sampling. 
+            This non-recursive ray tracer was written in C++ and is capable of secondary shadow rays and surface intersection with geometric primitives 
+            and triangle meshes. I implemented specular shading using the Lambertian model and anti-aliasing by super sampling. 
             I explored topics in light and shading models, lenses, and surface intersection with quartic functions. 
           </p>
           <div class="project-links">
@@ -211,19 +211,15 @@
       </div>
       <div class="projects-container">
         <div class="project-container project-card">
-          <h3 class="project-title">Project 4</h3>
-          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0"></iframe>
-          <!-- <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
+          <h3 class="project-title">Food Fiends Design Demo</h3>
+          <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" frameborder="0" style="width:100%"></iframe>
+          <!-- <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>          <p class="project-details"> -->
           <p class="project-details">
             This DEMO was created for a Human-Computer Interaction course using Android Studio 
             in collaboration with Kayla Hardie, Kevin Lu, and Kriti Ravindran.
-            We created a high-fidelity prototype and interviewed target users to test user-experience.
+            We created a high-fidelity prototype for an app that recommends recipes to reduce food waste 
+            and interviewed target users to test user-experience.
           </p>
-          <div class="project-links">
-            <a href="https://drive.google.com/file/d/1KEZ97Q6EK1sD7cekAAeWazNF1VCeSlH1/view?usp=sharing" target="_blank" class="nav-link">See the full report</a>
-            <br />
-            <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
-          </div>
         </div>
       </div>
     </section>
