--- a/index.html
+++ b/index.html
@@ -224,6 +224,29 @@
       </div>
     </section>
 
+    <!-- Art portfolio section -->
+    <section class="art" id="art">
+      <h2 class="arts-title">Artistic Endeavors</h2>
+      <div class="arts-container">
+        <div class="art-container art-card">
+          <h3 class="art-title">Self-Portrait in Charcoal</h3>
+          <img
+            src="assets/images/bokeh.png"
+            alt="bokeh effect"
+            loading="lazy"
+            class="art-pic"
+            style="width:100%"
+          />
+          <p class="art-details">
+            This DEMO was created for a Human-Computer Interaction course using Android Studio 
+            in collaboration with Kayla Hardie, Kevin Lu, and Kriti Ravindran.
+            We created a high-fidelity prototype for an app that recommends recipes to reduce food waste 
+            and interviewed target users to test user-experience.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact section -->
     <section class="contact" id="contact">
       <h2>Get In Touch With Me</h2>
