--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <ul class="skill-body">
         <li><b class="skill-titles">C++ :</b> 
           Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
-          Projects include console Chess and Catan games, maze with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
+          <br/>Projects include console Chess and Catan games, maze with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
         <li><b class="skill-titles">Python :</b> 
           Several years of course work as well as script writing for internships.</li>
         <li><b class="skill-titles">Bash scripts :</b> 
