--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#art" class="nav-link">Art</a></li>
         <li><a href="https://drive.google.com/file/d/1IGw22m_uttpWpc4wB5Ia8QfPcPMcxSon/view?usp=sharing" class="nav-link">Resume</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
       </ul>
