--- a/index.html
+++ b/index.html
@@ -92,28 +92,33 @@
     <!-- Skills section -->
     <section class="skills" id="skills">
       <h2 class="skill-header">My Top Skills</h2>
-      <ul class="skill-body">
-        <li><b class="skill-titles">C++ :</b> 
-          Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
-          <br/>Projects include console Chess and Catan games, maze with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
-        <li><b class="skill-titles">Python :</b> 
-          Several years of course work as well as script writing for internships.</li>
-        <li><b class="skill-titles">Bash scripts :</b> 
-          Several years of course work as well as script writing for internships.</li>
-        <li><b class="skill-titles">Agile Development :</b> 
-          Lead the transition to Agile development at my last coop and acted as scrum leader/project manager</li>
-        <li><b class="skill-titles">Git version control :</b>
-          Several years of experience for both group and personal projects</li>
-        <li><b class="skill-titles">Java :</b> 
-          Coursework projects including mobile PDF annotater for <b>Android</b>, snake game, and image editor similar to MS paint</li>
-        <li><b class="skill-titles">HTML/CSS/JavaScript :</b> 
-          I built this website! I've also contributed to the 
-          <a href="https://wics.uwaterloo.ca/">WiCS</a>
-           website and created web apps for several hackathons.
-        </li>
-        <li><b class="skill-titles">Math :</b> 
-          Skilled in <b>Linear Algebra</b>, multi variable <b>Calculus</b>, and basic <b>Physics</b> of motion.</li>
-      </ul>
+      <div class="skill-container">
+        <ul class="skill-body">
+          <li><b class="skill-titles">C++ :</b> 
+            Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
+            <!-- <br/> -->
+            Projects include console Chess and Catan games, maze and hierarchial puppet with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
+          <li><b class="skill-titles">Python :</b> 
+            Several years of course work as well as script writing for internships.</li>
+          <li><b class="skill-titles">Bash scripts :</b> 
+            Several years of course work as well as script writing for internships.</li>
+          <li><b class="skill-titles">Agile Development :</b> 
+            Lead the transition to Agile development at my last coop and acted as scrum leader/project manager</li>
+        </ul>
+        <ul class="skill-body">
+          <li><b class="skill-titles">Git version control :</b>
+            Several years of experience for both group and personal projects</li>
+          <li><b class="skill-titles">Java :</b> 
+            Coursework projects including mobile PDF annotater for <b>Android</b>, snake game, and image editor similar to MS paint</li>
+          <li><b class="skill-titles">HTML/CSS/JavaScript :</b> 
+            I built this website! I've also contributed to the 
+            <a href="https://wics.uwaterloo.ca/">WiCS</a>
+            website and created web apps for several hackathons.
+          </li>
+          <li><b class="skill-titles">Math :</b> 
+            Skilled in <b>Linear Algebra</b>, multi variable <b>Calculus</b>, and basic <b>Physics</b> of motion.</li>
+        </ul>
+      </div>
     </section>
 
     <!-- Projects section -->
@@ -181,7 +186,7 @@
         </div>
         <div class="project-container project-card">
           <h3 class="project-title">Time Flies</h3>
-          <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" frameborder="0" style="width:100%"></iframe>
+          <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" frameborder="0" style="width:100%" allowfullscreen></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/510579063?h=812f367f29" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
           <p class="project-details">
             This piece was inspired by my friend's research for her Masters in Genetics. Written in Processing, 
@@ -195,11 +200,11 @@
           </div>
         <div class="project-container project-card">
           <h3 class="project-title">Visual Weather Report</h3>
-          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0" style="width:100%"></iframe>
+          <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" frameborder="0" style="width:100%" allowfullscreen></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/526534500?h=f337d548e1" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe> -->
           <p class="project-details">
             This piece was inspired by the weather animations on mobile devices.
-            Written in processing, the code determines the high and the low temperature for the current day and 
+            Written in Processing, the code determines the high and the low temperature for the current day and 
             uses this information to create a background gradient with colours based on temperature. 
             It also looks at the precipitation status and the wind direction and speed.
           </p>
@@ -213,7 +218,7 @@
       <div class="projects-container">
         <div class="project-container project-card">
           <h3 class="project-title">Food Fiends Design Demo</h3>
-          <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" frameborder="0" style="width:100%"></iframe>
+          <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" frameborder="0" style="width:100%" allowfullscreen></iframe>
           <!-- <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>          <p class="project-details"> -->
           <p class="project-details">
             This DEMO was created for a Human-Computer Interaction course using Android Studio 
