--- a/index.html
+++ b/index.html
@@ -233,21 +233,48 @@
     <!-- Art portfolio section -->
     <section class="art" id="art">
       <h2 class="arts-title">Artistic Endeavors</h2>
+      <p class="arts-preamble">
+        I'm not a professional artist, but I have claimed to have some artistic ability, 
+        so here's some of my work as proof.
+      </p>
       <div class="arts-container">
         <div class="art-container art-card">
-          <h3 class="art-title">Self-Portrait in Charcoal</h3>
+          <h3 class="art-title">Sea Turtle</h3>
           <img
-            src="assets/images/bokeh.png"
-            alt="bokeh effect"
+            src="assets/images/turtle.jpg"
+            alt="turtle"
+            loading="lazy"
+            class="art-pic"
+            style="width:100%"
+          />
+          <p class="art-details turtle">
+            Watercolour painting.
+          </p>
+        </div>
+        <div class="art-container art-card">
+          <h3 class="art-title">Self-Portrait</h3>
+          <img
+            src="assets/images/self-portrait.jpg"
+            alt="portrait"
             loading="lazy"
             class="art-pic"
             style="width:100%"
           />
           <p class="art-details">
-            This DEMO was created for a Human-Computer Interaction course using Android Studio 
-            in collaboration with Kayla Hardie, Kevin Lu, and Kriti Ravindran.
-            We created a high-fidelity prototype for an app that recommends recipes to reduce food waste 
-            and interviewed target users to test user-experience.
+            Mix of black and white charcoal. This was done for a class, the shoe was a prompt.
+          </p>
+        </div>
+        <div class="art-container art-card">
+          <h3 class="art-title">Whale Print</h3>
+          <img
+            src="assets/images/whale.jpg"
+            alt="portrait"
+            loading="lazy"
+            class="art-pic"
+            style="width:100%"
+          />
+          <p class="art-details">
+            Silkscreen print with blue and black ink. The style of this whale was influenced by Art Nouveau. 
           </p>
         </div>
       </div>
