--- a/index.html
+++ b/index.html
@@ -354,6 +354,13 @@
           loading="lazy"
           class="socicon"
       /></a>
+      <a href="https://www.goodreads.com/user/show/8339107-erin#" target="_blank"
+        ><img 
+          src="assets/icons/iconfinder_goodreads_icon.png" 
+          alt="Goodreads" 
+          loading="lazy"
+          class="socicon"
+      /></a>
     </div>
 
     <!-- Scroll to top -->
