--- a/index.html
+++ b/index.html
@@ -74,18 +74,23 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        Having a natural affinity for both math and visual arts, I was torn when choosing my major 
+        and I initially started in the Actuarial Science program.
+        Although I enjoyed the math, I didn’t feel fulfilled creatively and I was surprised by how much I 
+        liked my Computer Science (CS) courses. I fell in love with the satisfaction that comes from 
+        solving complex problems. By the time I switched majors, there was a new option to specialize 
+        in Computational Fine Arts that perfectly combined both my passions. 
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
+        Outside of work, I’ve been heavily involved in education and inclusion initiatives. I served multiple 
+        terms on the Women in Computer Science 
+        <a href="https://wics.uwaterloo.ca/">(WiCS)</a>
+        Undergraduate Committee, starting as the Office Assistant and working my way up to Chair. 
+        Through my work with WiCS I was sponsored to attend the Grace Hopper conference, which was a 
+        pivotal moment of inspiration for my career when I first switched majors. I wanted to bring some of 
+        that experience back to my peers in Waterloo, so I joined the founding 
+        <a href="https://starcon.io/">StarCon</a> team as Director of Logistics. I also tutor math and French
+        and volunteer with Girl Guides. 
       </p>
     </section>
 
