headshot + more about

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="assets/images/wfh_1.svg"
+        src="assets/images/headshot_crop.jpg"
         alt="jane-doe"
         loading="lazy"
         class="hero-img"
@@ -58,8 +58,10 @@
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           I graduated from the University of Waterloo Computer Science (BCS) 
-          program in 2022 with a specialization in Computational Fine Arts 
-          and a minor in French Studies. My interests lie at the intersection 
+          program in 2022 with a specialization in Computational Fine Arts,
+           a minor in French Studies, and the 
+          <a href="https://uwaterloo.ca/student-success/exchange-and-study-abroad/global-experience-certificate">Global Experience Certificate. </a>
+          My interests lie at the intersection 
           of creativity and technology, whether that's thinking outside the box 
           to solve interesting problems or creating beautiful things with code. 
           When I'm not in front of my computer you can find me nose deep in a 
@@ -74,21 +76,17 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Having a natural affinity for both math and visual arts, I was torn when choosing my major 
-        and I initially started in the Actuarial Science program.
-        Although I enjoyed the math, I didn’t feel fulfilled creatively and I was surprised by how much I 
-        liked my Computer Science (CS) courses. I fell in love with the satisfaction that comes from 
-        solving complex problems. By the time I switched majors, there was a new option to specialize 
-        in Computational Fine Arts that perfectly combined both my passions. 
+        In the past, I've worked on user interfaces (UI/UX), quality assurance (QA), and database platforms.
+        You can find more detail about my experiences on my <a href="https://www.linkedin.com/in/erin-edward/" target="_blank">LinkedIn</a>.
+        Keep scrolling for a summary of my skills and recent projects. 
       </p>
       <p>
         Outside of work, I’ve been heavily involved in education and inclusion initiatives. I served multiple 
         terms on the Women in Computer Science 
         <a href="https://wics.uwaterloo.ca/">(WiCS)</a>
         Undergraduate Committee, starting as the Office Assistant and working my way up to Chair. 
-        Through my work with WiCS I was sponsored to attend the Grace Hopper conference, which was a 
-        pivotal moment of inspiration for my career when I first switched majors. I wanted to bring some of 
-        that experience back to my peers in Waterloo, so I joined the founding 
+        Through my work with WiCS I was sponsored to attend the Grace Hopper conference. 
+        I wanted to bring some of that experience back to my peers in Waterloo, so I joined the founding 
         <a href="https://starcon.io/">StarCon</a> team as Director of Logistics. I also tutor math and French
         and volunteer with Girl Guides. 
       </p>
